--- a/src/EasyKubeLog/EasyKubeLogService/wwwroot/css/site.css
+++ b/src/EasyKubeLog/EasyKubeLogService/wwwroot/css/site.css
@@ -1,6 +1,7 @@
 ﻿#blazor-error-ui {
     background: lightyellow;
     bottom: 0;
+    box-shadow: 0 -1px 2px #000000;
     box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
     display: none;
     left: 0;
