--- a/src/EasyKubeLog/EasyKubeLogService/Pages/Main.cshtml
+++ b/src/EasyKubeLog/EasyKubeLogService/Pages/Main.cshtml
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
-<body style="height: 100%; overflow: hidden">
+<body style="height: 100%; overflow: hidden; background: black">
     <app>
         <component type="typeof(App)" render-mode="ServerPrerendered" />
     </app>
