--- a/src/EasyKubeLog/EasyKubeLogService/Components/SearchField.razor
+++ b/src/EasyKubeLog/EasyKubeLogService/Components/SearchField.razor
@@ -1,27 +1,27 @@
 ﻿@*@page "/searchfield"*@
 
 <style>
-    .search-margin { margin-right: 2.0rem; }
-    .button-background { background: rgba(200, 200, 200, 0.9); border: 0}
+    .search-margin { margin-right: 1.5rem; }
+    .button-background { background: rgba(200, 200, 200, 0.9); border: 0; align-self: center}
 </style>
 
 @* ReSharper disable UnknownCssClass *@
 
-<div class="input-group defpadding">
+<div class="input-group defpadding" style="align-self: center">
     <div class="input-group-prepend search-margin">
         @*<span class="input-group-text">Search</span>*@
-        <button class="button-background" @onclick="ButtonSearch">Search</button>
+        <button class="button-background" @onclick="ButtonSearch" style="height: 50%; align-self: center">Search</button>
         <div class="d-flex justify-content-center align-items-center m-2" style="@(Style)">
             <div class="spinner-grow spinner-grow-sm" role="status">
                 <span class="sr-only">Loading...</span>
             </div>
         </div>
-        <input class="form-control button-background" type="text" aria-label="Search text" @bind-value="_text" @bind-value:event="oninput" @onkeyup="NewInputDelayedAndThrottled" @onchange="NewInput" />
+        <input class="form-control button-background" type="text" aria-label="Search text" @bind-value="_text"  @onkeyup="KeyPressed"  />
     </div>
 
-    <div class="input-group-prepend search-margin">
+    <div class="input-group-prepend search-margin" style="align-self: center">
         <span class="input-group-text button-background mr-1">Max</span>
-        <input class="form-control button-background" type="number" aria-label="Search text" @bind-value="MaxElements" @bind-value:event="oninput" @onkeyup="NewInputDelayedAndThrottled" @onchange="NewInput" style="max-width:7rem" />
+        <input class="form-control button-background" type="number" aria-label="Search text" @bind-value="MaxElements"  @onkeyup="KeyPressed" style="max-width:7rem" />
     </div>
 
     <SearchFieldDateTime  @ref="FromDateTime" Name="From" />
@@ -35,6 +35,7 @@
 </div>
 
 @using Microsoft.Extensions.Configuration;
+@using System.Threading
 
 @inject IConfiguration  _configuration;
 
@@ -55,8 +56,14 @@
     private string _text = String.Empty;
     private int _maxElements = 100;
 
-    private bool _searching;
-    string Style => _searching ? "" : "visibility: hidden";
+    public bool Searching { get; set; }
+
+    static string GetSearchingStyle(bool state)
+    {
+        return state ? "color: green" : "visibility: hidden";
+    }
+
+    public string Style { get; set; } = GetSearchingStyle(false);
 
     const int DefaultDelay = 1000;
     Task _delayTask = Task.CompletedTask;
@@ -70,7 +77,8 @@
 
     public void DisplaySpinningSearch(bool state)
     {
-        _searching = state;
+        Searching = state;
+        Style = GetSearchingStyle(state);
         InvokeAsync(StateHasChanged);
     }
 
@@ -83,8 +91,30 @@
 
     private void ButtonSearch()
     {
+
+        Console.WriteLine("Button Pressed");
+        try
+        {
+            AbortInCaseOfRunning();
+        }
+        catch (Exception )
+        {
+        }
         _lastQuery = String.Empty;
-        NewInput();
+
+        Interlocked.Exchange(ref _buttonPressed, 1);
+        try
+        {
+            Console.WriteLine("Button Search");
+            InternalNewInputDelayedAndThrottled(0);
+        }
+        catch (Exception )
+        {
+        }
+        Interlocked.Exchange(ref _buttonPressed, 0);
+
+
+
     }
 
     private void NewInput()
@@ -109,25 +139,48 @@
         _delayTask = null;
     }
 
+    int _buttonPressed = 0;
+
+    private void KeyPressed()
+    {
+        if (_buttonPressed == 0)
+        {
+            InternalNewInputDelayedAndThrottled(DefaultDelay);
+        }
+    }
+
     // Method will be called on each keystroke but it won't call immediately
     // NewInput but wait for additional keystrokes to come in
     private void NewInputDelayedAndThrottled()
     {
+        InternalNewInputDelayedAndThrottled(DefaultDelay);
+    }
+
+    private void InternalNewInputDelayedAndThrottled(int delay)
+    {
         AbortInCaseOfRunning();
         _tokenSource = new System.Threading.CancellationTokenSource();
-        _delayTask =
-        Task.Run(async () =>
+        var localToken = _tokenSource.Token;
+        Console.WriteLine("XXX CreateTask");
+
+        _delayTask = Task.Run(async () =>
         {
             try
             {
-                var token = _tokenSource.Token;
-                await Task.Delay(DefaultDelay, token);
-                await InvokeAsync(NewInput);
+                var token = localToken;
+                await Task.Delay(delay, token);
+                Console.WriteLine("XXX Search");
+                await InvokeAsync(() =>
+                {
+                    DisplaySpinningSearch(true);
+                    NewInput();
+                });
             }
             catch (Exception)
             {
-            // ignored
-        }
+                Console.WriteLine("XXX Abort");
+                // ignored
+            }
         }, _tokenSource.Token);
 
     }
