--- a/src/EasyKubeLog/EasyKubeLogService/Pages/Main.cshtml
+++ b/src/EasyKubeLog/EasyKubeLogService/Pages/Main.cshtml
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@using EmbeddedBlazorContent
 @namespace EasyKubeLogService.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
@@ -12,6 +13,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    @Html.EmbeddedBlazorContent()
     <title>EasyKubeLogService</title>
     <base href="~/" />
     @*<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
@@ -37,5 +39,7 @@
 
     @* ReSharper disable once Html.PathError *@
     <script src="_framework/blazor.server.js"></script>
+    <script src="_content/MatBlazor/dist/matBlazor.js"></script>
+    <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
 </body>
 </html>
