--- a/src/EasyKubeLog/EasyKubeLogService/Components/SearchField.razor
+++ b/src/EasyKubeLog/EasyKubeLogService/Components/SearchField.razor
@@ -11,18 +11,18 @@
 <div class="input-group defpadding" style="align-self: center">
     <div class="input-group-prepend search-margin">
         @*<span class="input-group-text">Search</span>*@
-        <button class="button-background" @onclick="ButtonSearchOrAbort" style="height: 49%; align-self: center; background: @ButtonBackground">@ButtonContent</button>
+        <MatButton class="button-background" style="@ButtonBackground" Raised="true" @onclick="ButtonSearchOrAbort" >@ButtonContent</MatButton>
+
         <div class="d-flex justify-content-center align-items-center m-2" style="@(Style)">
             <div class="spinner-grow spinner-grow-sm" role="status">
                 <span class="sr-only">Loading...</span>
             </div>
         </div>
-        <MatTextField class="button-background scaled" TValue="string" Label="Search For" @bind-Value="@_text" @onkeyup="TextChanged"  ></MatTextField>
+        <MatTextField class="button-background scaled" TValue="string" Label="Search For" @bind-Value="@Text" ></MatTextField>
     </div>
 
     <div class="input-group-prepend search-margin" style="align-self: center">
-        <span class="input-group-text button-background mr-1">Max</span>
-        <input class="form-control button-background" type="number" aria-label="Search text" @bind-value="MaxElements"  @onkeyup="TextChanged" style="max-width:7rem" />
+        <MatNumericUpDownField class="scaled" Minimum="0" Label="Max Number of Search Items" @bind-Value="@MaxElements"  @onkeyup="CountItemsChanged"></MatNumericUpDownField>
     </div>
 
     <SearchFieldDateTime  @ref="FromDateTime" Name="From" />
@@ -56,7 +56,17 @@
 
     // ReSharper disable once FieldCanBeMadeReadOnly.Local
     private string _text = String.Empty;
-    private int _maxElements = 100;
+
+    public string Text
+    {
+        get { return _text; }
+        set { _text = value; TextChanged(); }
+    }      
+
+    const int MaxElementsDefault = 100;
+
+    private int _maxElements = MaxElementsDefault;
+    private int _maxElementsSearched = MaxElementsDefault;
 
     public bool Searching { get; set; }
 
@@ -74,7 +84,11 @@
     public int MaxElements
     {
         get => _maxElements;
-        set => _maxElements = value < MaxElementsHighest ? value : MaxElementsHighest;
+        set
+        {
+            _maxElements = value < MaxElementsHighest ? value : MaxElementsHighest;
+            ExecuteCurrentSearch();
+        }
     }
 
     public void DisplaySpinningSearch(bool state)
@@ -97,7 +111,9 @@
 
     private bool _buttonStateCurrentlyExecutingSearch = false;
 
-    string ButtonBackground => (_buttonStateCurrentlyExecutingSearch == true) ? "rgba(255, 150, 150, 0.9)" : "rgba(150, 255, 150, 0.9)";
+    string ButtonBackground => (_buttonStateCurrentlyExecutingSearch == true) ? 
+            "color:black; background: rgba(255, 150, 150, 0.9)" : 
+            "color:black; background: rgba(150, 255, 150, 0.9)";
 
     private void SetDefaultState()
     {
@@ -118,7 +134,10 @@
         if (_buttonStateCurrentlyExecutingSearch)
             AbortCurrentSearch();
 
+        SetLastQuery(_lastQuery + "#"); // Ensure that a search is executed
+
         InternalCheckCurrentSearchTextAndExecuteIfDifferentToLastDelayedAndThrottled(DefaultDelay);
+
     }
 
     private void AbortCurrentSearch()
@@ -129,13 +148,17 @@
 
     private void ExecuteCurrentSearch()
     {
-        SetSearchIsExecutingNowState();
         InternalCheckCurrentSearchTextAndExecuteIfDifferentToLastDelayedAndThrottled(DefaultDelay);
     }
 
     private void TextChanged()
     {
         Console.WriteLine($"TextChanged: {_lastQuery} - {_currentQuery}");
+        ExecuteCurrentSearch();
+    }
+
+    private void CountItemsChanged()
+    {
         ExecuteCurrentSearch();
     }
 
@@ -146,9 +169,11 @@
         {
             Console.WriteLine($"CheckCurrentSearchTextAndExecuteIfDifferentToLast - 2:: {_text}");
             string currentQuery = _text + _maxElements.ToString() + _fromDateTime.Date.ToString() + _toDateTime.Date.ToString();
-            if (currentQuery == _lastQuery)
+            if ((currentQuery == _lastQuery) && (_maxElementsSearched == _maxElements))
                 return false;
             _currentQuery = currentQuery;
+            _maxElementsSearched = _maxElements;
+
             Console.WriteLine("CheckCurrentSearchTextAndExecuteIfDifferentToLast - 3");
         }
         InvokeAsync(() =>
@@ -214,14 +239,20 @@
                 // ignored
             }
 
-            lock (_lastQuery)
-            {
-                _lastQuery = _currentQuery;
-                Console.WriteLine($"QUERY SET TO LAST: {_lastQuery}")
-                ;
-            }
+            SetLastQuery(_currentQuery);
+
             _ = InvokeAsync(SetDefaultState); // Ignore task here - otherwise UI is blocked
         }, _tokenSource.Token);
+    }
+
+    private void SetLastQuery(string query)
+    {
+        lock (_lastQuery)
+        {
+            _lastQuery = query;
+            Console.WriteLine($"QUERY SET TO LAST: {query}")
+                ;
+        }
     }
 
     public Action<string, int, DateTimeOffset, DateTimeOffset> OnSearchQueryChange;
