--- a/src/EasyKubeLog/EasyKubeLogService/Shared/MainLayout.razor
+++ b/src/EasyKubeLog/EasyKubeLogService/Shared/MainLayout.razor
@@ -12,8 +12,9 @@
             <EasyKubeLogService.Components.SearchField @ref="SearchField"/>
         </div>
         <div class="mt-3 mb-3 pl-3 " style="color: rgba(200, 200, 200, 0.9)">Found: @_numEntries</div>
-        <div name="MainList" style="position: absolute; width: auto; right: 0; left: 0; height: auto; top: 190px; bottom: 0; overflow: auto; box-sizing: border-box">
-            <EasyKubeLogService.Components.List @ref="_mainList"/>
+        <MatDivider style="background: rgba(200, 200, 200, 0.9)"></MatDivider>
+        <div class="ml-2 mr-2" name="MainList" style="position: absolute; width: auto; right: 0; left: 0; height: auto; top: 200px; bottom: 0; overflow: auto; box-sizing: border-box">
+            <EasyKubeLogService.Components.List @ref="_mainList" />
         </div>
     </div>
 </div>
