--- a/src/EasyKubeLog/EasyKubeLogService/Components/SearchField.razor
+++ b/src/EasyKubeLog/EasyKubeLogService/Components/SearchField.razor
@@ -1,38 +1,53 @@
 ﻿@*@page "/searchfield"*@
 
+@code {
+    const string DefaultBackgroundControls = "background: rgba(200, 200, 200, 0.9);";
+    const string DefaultControlsLayout = "border: 0; align-self: center;";
+
+
+    const string ButtonRed = "color:black; background: rgba(255, 150, 150, 0.9);";
+    const string ButtonGreen = "color:black; background: rgba(150, 255, 150, 0.9);";
+    const string ButtonRedDefaultLayout = ButtonRed + DefaultControlsLayout;
+    const string ButtonGreenDefaultLayout = ButtonGreen + DefaultControlsLayout;
+    const string DefaultControlStyle = DefaultBackgroundControls + DefaultControlsLayout;
+}
+
 <style>
-    .search-margin { margin-right: 1.5rem; }
-    .button-background { background: rgba(200, 200, 200, 0.9); border: 0; align-self: center}
-    .scaled { margin-top: 0.5rem; transform: scale(0.8); }
+    .search-margin {
+        margin-right: 1.5rem;
+    }
+
+    .button-background {
+        border: 0;
+        align-self: center
+    }
+
+    .scaled {
+        margin-top: 0.5rem;
+        transform: scale(0.8);
+    }
 </style>
 
 @* ReSharper disable UnknownCssClass *@
 
 <div class="input-group defpadding" style="align-self: center">
     <div class="input-group-prepend search-margin">
-        @*<span class="input-group-text">Search</span>*@
-        <MatButton class="button-background" style="@ButtonBackground" Raised="true" @onclick="ButtonSearchOrAbort" >@ButtonContent</MatButton>
+        <MatButton style="@ButtonBackground" Raised="true" @onclick="ButtonSearchOrAbort">@ButtonContent</MatButton>
 
         <div class="d-flex justify-content-center align-items-center m-2" style="@(Style)">
             <div class="spinner-grow spinner-grow-sm mr-1" role="status">
                 <span class="sr-only">Loading...</span>
             </div>
         </div>
-        <MatTextField class="button-background scaled" TValue="string" Label="Search For" @bind-Value="@Text" ></MatTextField>
+        <MatTextField class="scaled" style="@DefaultControlStyle" TValue="string" Label="Search For" @bind-Value="@Text"></MatTextField>
     </div>
 
     <div class="input-group-prepend search-margin" style="align-self: center">
-        <MatNumericUpDownField class="scaled" Minimum="0" Label="Max Number of Search Items" @bind-Value="@MaxElements"  @onkeyup="CountItemsChanged"></MatNumericUpDownField>
+        <MatNumericUpDownField class="scaled"  style="@DefaultControlStyle" Minimum="0" Label="Max Number of Search Items" @bind-Value="@MaxElements" @onkeyup="CountItemsChanged"></MatNumericUpDownField>
     </div>
 
-    <SearchFieldDateTime  @ref="FromDateTime" Name="From" />
-    <SearchFieldDateTime  @ref="ToDateTime" Name="To" />
-
-    @*<div class="input-group-prepend search-margin" style="align-items:center;">
-            <input type="checkbox" aria-label="Enable date from" @bind-value="_enabledDateFrom" class="form-check" style="transform: scale(2.9);" />
-            <span class="input-group-text" style="padding-left: 1.0rem;">From</span>
-            <input type="datetime-local" aria-label="Search date from" style="@(_style)" @bind-value="DateFrom" disabled="@(!EnabledDateFrom)" @bind-value:event="oninput" @onkeyup="CheckCurrentSearchTextAndExecuteIfDifferentToLast" class="form-control" />
-        </div>*@
+    <SearchFieldDateTime @ref="FromDateTime" Name="From" />
+    <SearchFieldDateTime @ref="ToDateTime" Name="To" />
 </div>
 
 @using Microsoft.Extensions.Configuration;
@@ -48,11 +63,17 @@
     private SearchFieldDateTime _fromDateTime;
     private SearchFieldDateTime _toDateTime;
     // ReSharper disable once UnusedMember.Local
-    private SearchFieldDateTime FromDateTime { get => _fromDateTime;
-        set { _fromDateTime = value; TextChanged(); } }
+    private SearchFieldDateTime FromDateTime
+    {
+        get => _fromDateTime;
+        set { _fromDateTime = value; TextChanged(); }
+    }
     // ReSharper disable once UnusedMember.Local
-    private SearchFieldDateTime ToDateTime { get => _toDateTime;
-        set { _toDateTime = value; TextChanged(); } }
+    private SearchFieldDateTime ToDateTime
+    {
+        get => _toDateTime;
+        set { _toDateTime = value; TextChanged(); }
+    }
 
     // ReSharper disable once FieldCanBeMadeReadOnly.Local
     private string _text = String.Empty;
@@ -112,8 +133,7 @@
     private bool _buttonStateCurrentlyExecutingSearch = false;
 
     string ButtonBackground => (_buttonStateCurrentlyExecutingSearch == true) ?
-            "color:black; background: rgba(255, 150, 150, 0.9)" :
-            "color:black; background: rgba(150, 255, 150, 0.9)";
+            ButtonRedDefaultLayout : ButtonGreenDefaultLayout;
 
     private void SetDefaultState()
     {
@@ -207,10 +227,10 @@
         if (_initialCall == false)
         {
             _initialCall = true;
-            Task.Delay(DefaultDelay*3).Wait(); // If we don't do that on startup an cancelled exception will be thrown 
-                                               // because not everything has been initialized yet - the reason is not quite clear 
-                                               // and in worst case on slower system the initial search might not be executed
-                                               // TODO: check if there is a RenderFinished call
+            Task.Delay(DefaultDelay * 3).Wait(); // If we don't do that on startup an cancelled exception will be thrown
+                                                 // because not everything has been initialized yet - the reason is not quite clear
+                                                 // and in worst case on slower system the initial search might not be executed
+                                                 // TODO: check if there is a RenderFinished call
         }
         else AbortInCaseOfRunning();
         _tokenSource = new System.Threading.CancellationTokenSource();
