--- a/src/EasyKubeLog/EasyKubeLogService/Components/SearchField.razor
+++ b/src/EasyKubeLog/EasyKubeLogService/Components/SearchField.razor
@@ -2,19 +2,24 @@
 
 @code {
     const string DefaultBackgroundControls = "background: rgba(200, 200, 200, 0.9);";
-    const string DefaultControlsLayout = "border: 0; align-self: center;";
 
+    static string DefaultControlsLayoutRemWidthPx(double leftRem = 0.0, int width = 0)
+    {
+        string leftRemString = $"{leftRem.ToString(CultureInfo.InvariantCulture)}";
+        string remWidthString = $"{((leftRem == 0.0 && width == 0) ? String.Empty : $"margin-left: {leftRemString}rem; width:{width}px")}";
+        return $"border: 0; align-self: center; {remWidthString}";
+    }
+
+    static readonly string DefaultControlsLayout = DefaultControlsLayoutRemWidthPx(0.0, 0);
 
     const string ButtonRed = "color:black; background: rgba(255, 150, 150, 0.9);";
     const string ButtonGreen = "color:black; background: rgba(150, 255, 150, 0.9);";
-    const string ButtonRedDefaultLayout = ButtonRed + DefaultControlsLayout;
-    const string ButtonGreenDefaultLayout = ButtonGreen + DefaultControlsLayout;
-    const string DefaultControlStyle = DefaultBackgroundControls + DefaultControlsLayout;
+    static string ButtonRedDefaultLayout => ButtonRed + DefaultControlsLayout;
+    static string ButtonGreenDefaultLayout => ButtonGreen + DefaultControlsLayout;
+    static string DefaultControlStyle => DefaultBackgroundControls + DefaultControlsLayout;
 
     const string TopScaled = "margin-top: 0.5rem; transform: scale(0.8);";
-    const string DefaultControlStyleTopScaled = DefaultControlStyle + TopScaled;
-
-
+    static readonly string DefaultControlStyleTopScaled = DefaultControlStyle + TopScaled;
 }
 
 @* ReSharper disable UnknownCssClass *@
@@ -22,17 +27,16 @@
 <div class="input-group defpadding" style="align-self: center">
     <div class="input-group-prepend search-margin">
         <MatButton style="@ButtonBackground" Raised="true" @onclick="ButtonSearchOrAbort">@ButtonContent</MatButton>
-
-        <div class="d-flex justify-content-center align-items-center m-2" style="@(Style)">
-            <div class="spinner-grow spinner-grow-sm mr-1" role="status">
-                <span class="sr-only">Loading...</span>
-            </div>
-        </div>
+        <MatProgressBar Indeterminate="true" Closed="@Is" style="@DefaultControlsLayoutRemWidthPx(1.5, 30)"></MatProgressBar>
         <MatTextField style="@DefaultControlStyleTopScaled" TValue="string" Label="Search For" @bind-Value="@Text"></MatTextField>
     </div>
 
-    <div class="input-group-prepend search-margin" style="align-self: center">
-        <MatNumericUpDownField style="@DefaultControlStyleTopScaled" Minimum="0" Label="Max Number of Search Items" @bind-Value="@MaxElements" @onkeyup="CountItemsChanged"></MatNumericUpDownField>
+    <div class="input-group-prepend" style="align-self: center">
+        <MatNumericUpDownField style="@DefaultControlStyleTopScaled" Minimum="0"
+                               Label="Max Number of Search Items" 
+                               @bind-Value="@MaxElements"
+                               @onkeyup="CountItemsChanged">
+        </MatNumericUpDownField>
     </div>
 
     <SearchFieldDateTime @ref="FromDateTime" Name="From" />
@@ -42,6 +46,7 @@
 @using Microsoft.Extensions.Configuration;
 @using System.Threading
 @using System.Runtime.InteropServices.WindowsRuntime
+@using System.Globalization
 
 @inject IConfiguration  _configuration;
 
@@ -69,7 +74,7 @@
 
     public string Text
     {
-        get { return _text; }
+        get => _text;
         set { _text = value; TextChanged(); }
     }
 
@@ -79,6 +84,7 @@
     private int _maxElementsSearched = MaxElementsDefault;
 
     public bool Searching { get; set; }
+    public bool NotSearching => !Searching;
 
     static string GetSearchingStyle(bool state)
     {
@@ -251,13 +257,13 @@
             }
             catch (Exception)
             {
-            // ignored
-        }
+                // ignored
+            }
 
             SetLastQuery(_currentQuery);
 
             _ = InvokeAsync(SetDefaultState); // Ignore task here - otherwise UI is blocked
-    }, _tokenSource.Token);
+        }, _tokenSource.Token);
     }
 
     private void SetLastQuery(string query)
